<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2016-2022 crDroid Android Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="device_title">OnePlus Settings</string>
    <string name="device_summary">Adjust OnePlus specific device settings</string>

    <!-- Notification slider -->
    <string name="notification_slider_category_title">Alert slider</string>
    <string name="notification_slider_title">Alert slider settings</string>
    <string name="notification_slider_selection_dialog_title">Action</string>
    <string name="notification_slider_top_position">Top position</string>
    <string name="notification_slider_middle_position">Middle position</string>
    <string name="notification_slider_bottom_position">Bottom position</string>
    <string name="notification_slider_mode_total_silence">Total silence</string>
    <string name="notification_slider_mode_alarms_only">Alarms only</string>
    <string name="notification_slider_mode_priority_only">Priority only</string>
    <string name="notification_slider_mode_none">All</string>

    <string name="notification_slider_usage_title">Use slider for</string>
    <string name="notification_slider_for_notification">Notification</string>
    <string name="notification_slider_for_flashlight">Flashlight</string>
    <string name="notification_slider_for_brightness">Brightness</string>
    <string name="notification_slider_for_rotation">Rotation</string>
    <string name="notification_slider_for_ringer">Ringer</string>
    <string name="notification_slider_for_notification_ringer">Notification and ringer</string>

    <string name="notification_slider_flashlight_off">Off</string>
    <string name="notification_slider_flashlight_on">On</string>
    <string name="notification_slider_flashlight_blink">Blink</string>

    <string name="notification_slider_brightness_auto">Auto</string>
    <string name="notification_slider_brightness_brightest">Brightest</string>
    <string name="notification_slider_brightness_darkest">Darkest</string>

    <string name="notification_slider_rotation_auto">Auto</string>
    <string name="notification_slider_rotation_portrait">Portrait</string>
    <string name="notification_slider_rotation_landscape_90">Landscape (90°)</string>
    <string name="notification_slider_rotation_landscape_270">Landscape (270°)</string>

    <string name="notification_slider_ringer_normal">Normal</string>
    <string name="notification_slider_ringer_vibrate">Vibrate</string>
    <string name="notification_slider_ringer_silent">Silent</string>

    <!-- Vibration control -->
    <string name="category_vibrator">Vibrator</string>
    <string name="vib_strength_title_head">Strength</string>
    <string name="vib_strength_summary_head">Define the strength of the vibrator</string>

    <!-- Custom seekbar -->
    <string name="custom_seekbar_value">Value: <xliff:g id="v">%s</xliff:g></string>
    <string name="custom_seekbar_default_value">by default</string>
    <string name="custom_seekbar_default_value_to_set">Default value: <xliff:g id="v">%s</xliff:g>\nLong tap to set</string>
    <string name="custom_seekbar_default_value_is_set">Default value is set</string>

    <!-- USB 2.0 Force FastCharge -->
    <string name="usb_title">USB</string> 
    <string name="usb2_fc_title">Fast charge</string>
    <string name="usb2_fc_summary">Force fast charging of up to 900mA in USB 2.0 mode</string>

    <!-- Dolby -->
    <string name="dolby_category">Dolby</string>
    <string name="dolby_title">Dolby Atmos</string>
    <string name="dolby_summary">Configure the audio output based on media content</string>

    <!-- Touchpanel -->
    <string name="touchpanel_title">Touchpanel</string>
    <string name="game_mode_title">Hyper Touch</string>
    <string name="game_mode_summary">Hyper Touch can dramatically improving touch response and frame rate stability in games</string>
    <string name="game_mode_warning">Increases power consumption</string>
    <string name="edge_touch_title">TP Edge Limit</string>
    <string name="edge_touch_summary">Disable the touchpanels edge limit</string>
    <string name="edge_touch_warning">Increases possibility of accidental touch</string>
</resources>
